<resources>
    <string name="app_name">Dj Panda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="party_image">Party image</string>
    <string name="dj_image">DJ image</string>
    <string name="account">account</string>
    <string name="party_name">Party name</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>
    <string name="ticket_purchase">Ticket Purchase</string>
    <string name="party_date">Party date</string>
    <string name="party_time">Party time</string>
    <string name="party_location">Party location</string>
    <string name="party_price">Party price</string>





</resources>